tests/files/type_checker_tests/should_pass/148.cmdr
//Test that not equals operation type checks
a = 1;
x = (2.0, true, 1)[a] != false;
