tests/files/type_checker_tests/should_fail/225.cmdr
//Should not be able to append ints to bool array
x = [true, false];
x.append(1);